my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql-fastapi
  template:
    metadata:
      labels:
        app: mysql-fastapi
    spec:
      containers:
        - name: mysql-container
          image: datascientest/mysql-k8s:1.0.0
          ports:
            - containerPort: 3306
        - name: fastapi-container
          image: dbmalek92/datascientest_user_api:v1
          ports:
            - containerPort: 8000
