my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-fastapi-ingress
spec:
  defaultBackend:
    service:
      name: mysql-fastapi-service
      port:
        number: 80
